--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -4,15 +4,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{center}
-  \begin{minipage}{0.5\textwidth}
-    \begin{small}
-      In which the reasons for creating this package are laid bare for the
-      whole world to see and we encounter some usage guidelines.
-    \end{small}
-  \end{minipage}
-  \vspace{0.5cm}
-\end{center}
+% \begin{center}
+%   \begin{minipage}{0.5\textwidth}
+%     \begin{small}
+%       In which the reasons for creating this package are laid bare for the
+%       whole world to see and we encounter some usage guidelines.
+%     \end{small}
+%   \end{minipage}
+%   \vspace{0.5cm}
+% \end{center}
 
 
 % Here is the start\index{start} of my document.
