--- a/Thesis.tex
+++ b/Thesis.tex
@@ -203,6 +203,8 @@ diploma or other qualifications.
 
 \begin{document}
 
+\setcounter{tocdepth}{1}
+
 \frontmatter
   \maketitle
   % \include{Sources/Title}
@@ -235,6 +237,9 @@ diploma or other qualifications.
 
   \include{Sources/Traits}
   \include{Sources/Applications}
+
+  \part{Related and Future Work}
+
   \include{Sources/Related}
   \include{Sources/Conclusion}
 
